min-io/deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: min-io
  namespace: min-io
spec:
  selector:
    matchLabels:
      app: min-io
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: min-io
    spec:
      # Refer to the PVC created earlier
      volumes:
      - name: storage
        persistentVolumeClaim:
          # Name of the PVC created earlier
          claimName: min-io
      containers:
      - name: minio
        # Pulls the default Minio image from Docker Hub
        image: minio/minio:latest
        resources:
          limits:
            cpu: 200m
            memory: 170Mi
          requests:
            cpu: 100m
        args:
        - server
        - --console-address 
        - :9001
        - /storage
        ports:
        - containerPort: 9000
          name: api-port
          protocol: TCP
          hostPort: 9000
        - containerPort: 9001
          name: console-port
          protocol: TCP
        # Mount the volume into the pod
        volumeMounts:
        - name: storage # must match the volume name, above
          mountPath: "/storage"
