min-io/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: min-io
  namespace: min-io
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
    - port: 9001
      targetPort: 9001
      protocol: TCP
  selector:
    app: min-io
